# desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/lessons/: 01-tauri-mental-model.md  02-todo-and-repository.md  03-json-persistence.md  04-errors-and-window-state.md  05-capabilities-and-release.md
scripts/: prepare-tauri-bundle.mjs  release-check.mjs
src/: main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  main-window-core.json  main-window-state.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: add_todo.toml  delete_todo.toml  get_todo_board.toml  toggle_todo.toml
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/api/: error.rs  greeting.rs  mod.rs  todo.rs
src-tauri/src/application/: greeting_service.rs  mod.rs  todo_service.rs
src-tauri/src/domain/: learner.rs  mod.rs  task.rs
src-tauri/src/infrastructure/: app_metadata.rs  in_memory_todo_repository.rs  json_todo_repository.rs  mod.rs
src/app/: courseApp.ts  tauriClient.ts
src/ui/: renderDashboard.ts
