[package]
name = "tauri_todo_course"
version = "0.1.0"
edition = "2021"
description = "A teaching project for learning Tauri from first principles."

[lib]
name = "tauri_todo_course"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-window-state = "2"
